--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "php-namespace-monkey",
   "main": "./lib/php-namespace-monkey",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Never write a PHP namespace declaration again.",
-  "keywords": [],
-  "repository": "https://github.com/underground-works/atom-php-namespace-monkey",
+  "keywords": ["php", "namespace"],
+  "repository": "https://github.com/KevinVonJocoon/atom-php-namespace-monkey",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
